--- a/templates/quote.html
+++ b/templates/quote.html
@@ -5,9 +5,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 </head>
 <body class="alert alert-danger">
+    
     <div id="quote-container" class="mx-auto my-3 text-center">
-        <p id="quote">{{ quote }}</p>
+        <h4><p id="quote">{{ quote }}</p></h4>
         <button id="new-quote" onclick="window.location.reload()" class="btn btn-primary">New Quote</button>
     </div>
     
 </body>
+  
